# hiai

./: CMakeLists.txt  README.md
hiai/: CMakeLists.txt
hiai/fmk/: CMakeLists.txt
hiai/fmk/inc/: CMakeLists.txt
hiai/fmk/inc/fmk/api/: CMakeLists.txt  graph.h  model.h
hiai/fmk/inc/fmk/graph/core/: CMakeLists.txt
hiai/fmk/inc/fmk/graph/core/cgraph/: compute_graph.h
hiai/fmk/inc/fmk/graph/core/edge/: edge.h
hiai/fmk/inc/fmk/graph/core/node/: node.h
hiai/fmk/inc/fmk/graph/infershape/: CMakeLists.txt
hiai/fmk/src/: CMakeLists.txt
hiai/fmk/src/api/: CMakeLists.txt  graph.cpp  model.cpp
hiai/fmk/src/graph/core/: CMakeLists.txt
hiai/fmk/src/graph/core/cgraph/: compute_graph.cpp
hiai/fmk/src/graph/core/edge/: edge.cpp
hiai/fmk/src/graph/core/node/: node.cpp
hiai/infra/inc/: CMakeLists.txt
hiai/infra/inc/infra/base/: CMakeLists.txt  inplace.h  status.h
hiai/infra/src/: CMakeLists.txt
hiai/infra/src/base/: CMakeLists.txt  inplace.cpp
test/: CMakeLists.txt
test/ct/: CMakeLists.txt
test/ct/fmk/: CMakeLists.txt
test/ct/fmk/graph/: CMakeLists.txt
test/ct/fmk/graph/core/: CMakeLists.txt
test/ct/fmk/graph/core/cgraph/: compute_graph_test.cpp
